Complete rewrite with minimal working code for MongoDB